--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "GPL-3.0-only"
 [tool.poetry.dependencies]
 python = "^3.6"
 flask = "^1.1.2"
+flask-restful = "^0.3.8"
+flask_sqlalchemy = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.3"
