--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ dist: xenial
 
 stages:
   - lint
-  - test
-  - name: deploy
-    if: tag IS present
 
 cache:
   pip: true
@@ -17,14 +14,8 @@ jobs:
   include:
     - stage: lint
       install:
-        - pip install pre-commit
-        - pre-commit install-hooks
-      script:
-        - pre-commit run --all-files
-    - stage: test
-      install:
         - pip install --upgrade pip
         - pip install poetry
         - poetry install -v
       script:
-        - pytest --cov
+        - flake8
