--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ flask_sqlalchemy = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.3"
-pylint = "^2.5.2"
+flake8 = "^3.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
