--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.6"
 flask = "^1.1.2"
 flask_sqlalchemy = "^2.4.3"
 pyJWT = "^1.7.1"
+fastapi = "^0.55.1"
+uvicorn = "^0.11.5"
+sqlalchemy = "^1.3.17"
+passlib = "^1.7.2"
+bcrypt = "^3.1.7"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.3"
