--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.11.5"
 sqlalchemy = "^1.3.17"
 passlib = "^1.7.2"
 bcrypt = "^3.1.7"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.3"
