--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ python-multipart = "^0.0.5"
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.3"
 pylint = "^2.5.2"
+pytest = "^5.4"
+requests = "^2.23"
 
 [build-system]
 requires = ["poetry>=0.12"]
