--- a/example_config.ini
+++ b/example_config.ini
@@ -8,7 +8,7 @@ workers = 2
 # This is used for hashing passwords
 # You should generate one by running
 # $ openssl rand -hex 32
-secret =
+secret = no_secret
 # This means if this instance is meant for public use or not, if you are hosting this for your self and a few other people leave it false
 public = false
 
