Make it all async
This also renames /token to /login

--- a/example_config.ini
+++ b/example_config.ini
@@ -11,6 +11,8 @@ workers = 2
 secret = no_secret
 # This means if this instance is meant for public use or not, if you are hosting this for your self and a few other people leave it false
 public = false
+# Usually just leave the default
+db url = sqlite://./api/mneme.db
 
 # This information is only needed if `public` is set to false,
 # otherwise there are no "Admin" accounts and new users can simply register
