--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ python = "^3.7"
 pyJWT = "^1.7.1"
 fastapi = "^0.55.1"
 uvicorn = "^0.11.5"
-sqlalchemy = "^1.3.17"
 passlib = "^1.7.2"
 bcrypt = "^3.1.7"
 python-multipart = "^0.0.5"
+tortoise-orm = "^0.16.13"
 
 [tool.poetry.dev-dependencies]
+asynctest = "^0.13"
 autopep8 = "^1.5.3"
 pylint = "^2.5.2"
 pytest = "^5.4"
@@ -26,9 +27,10 @@ ignore = ["tests"]
 # Disable missing doc-strings,
 # Unnecessary "else" after "raise/return",
 disable = ["C0114", "C0115", "C0116", "R1705", "R1720", "W0511", "R0401"]
+load-plugins = ["tortoise.contrib.pylint"]
 
 [tool.pylint.basic]
-good-names = ["r", "db", "kw", "i", "e"]
+good-names = ["r", "db", "kw", "i", "e", "c"]
 
 [tool.pylint.format]
 max-line-length = 120
