Keep deleted entries/journals for a week (or config)

--- a/example_config.ini
+++ b/example_config.ini
@@ -13,6 +13,9 @@ secret = no_secret
 public = false
 # Usually just leave the default
 db url = sqlite://./api/mneme.db
+# mneme by default keeps deleted journals and entries for 7 days unless it's told to not keep them at all
+# This is counted in days. If set to 0 then they will be deleted within 2 hours
+delete after = 7
 
 # This information is only needed if `public` is set to false,
 # otherwise there are no "Admin" accounts and new users can simply register
