--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ passlib = "^1.7.2"
 bcrypt = "^3.1.7"
 python-multipart = "^0.0.5"
 tortoise-orm = "^0.16.13"
+aiosqlite = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 asynctest = "^0.13"
