Add commercial instance type and update example config

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,28 +1,36 @@
 # The values set are the default, change them as you want and then restart the app
 
 [App]
-# Usually 127.0.0.1 is fine since it's the web-app only that needs to be able to talk to the world
-host = 127.0.0.1
+# If you plan to only use the web-app and not any other apps, you can change it to `127.0.0.1`
+host = 0.0.0.0
 port = 8000
-workers = 2
+
 # This is used for hashing passwords
-# You should generate one by running
+# You should generate a secret by running
 # $ openssl rand -hex 32
 secret = no_secret
-# This means if this instance is meant for public use or not, if you are hosting this for your self and a few other people leave it false
-public = false
-# Usually just leave the default
+
+# Specifies if your instance is `private`, `public`, or `commercial`.
+# `private` means that new accounts can only be created from an admin account,
+# `public` means that everyone can create a new account with (for now) no limitations,
+# `commercial` means that everyone can create a "free" account but there are limitation to what they can do.
+# `private` (or `public`) is probably what you want.
+# If you want to go with `commercial` you need to set up a payment system as well that will up/downgrade the users.
+instance = private
+
+# Usually just leave the default, sqlite is the only database supported right now
 db url = sqlite://./api/mneme.db
+
 # mneme by default keeps deleted journals and entries for 7 days unless it's told to not keep them at all
 # This is counted in days. If set to 0 then they will be deleted within 2 hours
 delete after = 7
 
-# This information is only needed if `public` is set to false,
-# otherwise there are no "Admin" accounts and new users can simply register
+# This information is most important if the instance is private
+# If the instance is public or commercial this user does get created but (for now) he is treated as a normal user.
+
 # After the creation of the user if you change the username (here or from an app) a new user will be created.
 [Admin User]
 username = admin
 password = 12345
 # If this user's journals are encrypted or not
 encrypted = false
-
