--- a/example_config.ini
+++ b/example_config.ini
@@ -19,7 +19,7 @@ secret = no_secret
 instance = private
 
 # Usually just leave the default, sqlite is the only database supported right now
-db url = sqlite://./api/mneme.db
+db url = sqlite://./mnemeapi/mneme.db
 
 # mneme by default keeps deleted journals and entries for 7 days unless it's told to not keep them at all
 # This is counted in days. If set to 0 then they will be deleted within 2 hours
