--- a/.gitignore
+++ b/.gitignore
@@ -131,9 +131,8 @@ dmypy.json
 .idea
 .vscode
 
-/mnemeapi/site.db
 poetry.lock
 mnemeapi/mneme.db
-test.db
+mnemeapi/mneme.db-*
 config.ini
 /mnemeapi/backups
