--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,8 @@
-aiosqlite==0.14.1
-bcrypt==3.1.7
-cffi==1.14.0
-click==7.1.2
-fastapi==0.55.1
-h11==0.9.0
-httptools==0.1.1; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
-iso8601==0.1.12
-passlib==1.7.2
-pycparser==2.20
-pydantic==1.6
-pyjwt==1.7.1
-pypika==0.37.16
-python-multipart==0.0.5
-six==1.15.0
-starlette==0.13.2
-tortoise-orm==0.16.13
-typing-extensions==3.7.4.2
-uvicorn==0.11.5
-uvloop==0.14.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
-websockets==8.1
+pyJWT>=1.7,<1.8
+fastapi>=0.55,<0.56
+uvicorn>=0.11,<0.12
+passlib>=1.7,<1.8
+bcrypt>=3.1,<3.2
+python-multipart>=0.0.5,<0.1
+tortoise-orm>=0.16,<0.17
+aiosqlite>=0.15,<0.16
